--- a/src/CSharpRESTSolution/CSharpREST/CSharpREST.csproj
+++ b/src/CSharpRESTSolution/CSharpREST/CSharpREST.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.ServiceModel.Syndication" Version="5.0.0" />
+  </ItemGroup>
+
 </Project>
